language/src/main/java/cn/koha/modelica/parser/Modelica0_3Parser.java
// Generated from F:/graalmodelica/language/src/main/java/cn/koha/modelica/parser/Modelica0_3.g4 by ANTLR 4.13.1
package cn.koha.modelica.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Modelica0_3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, IDENT=90, STRING=91, UNSIGNED_NUMBER=92, WS=93, COMMENT=94, 
		LINE_COMMENT=95, UnicodeBOM=96;
	public static final int
		RULE_stored_definition = 0, RULE_class_definition = 1, RULE_class_specifier = 2, 
		RULE_class_prefixes = 3, RULE_long_class_specifier = 4, RULE_short_class_specifier = 5, 
		RULE_der_class_specifier = 6, RULE_base_prefix = 7, RULE_enum_list = 8, 
		RULE_enumeration_literal = 9, RULE_composition = 10, RULE_language_specification = 11, 
		RULE_external_function_call = 12, RULE_element_list = 13, RULE_element = 14, 
		RULE_import_clause = 15, RULE_import_list = 16, RULE_extends_clause = 17, 
		RULE_constraining_clause = 18, RULE_component_clause = 19, RULE_type_prefix = 20, 
		RULE_type_specifier = 21, RULE_component_list = 22, RULE_component_declaration = 23, 
		RULE_condition_attribute = 24, RULE_declaration = 25, RULE_modification = 26, 
		RULE_class_modification = 27, RULE_argument_list = 28, RULE_argument = 29, 
		RULE_element_modification_or_replaceable = 30, RULE_element_modification = 31, 
		RULE_element_redeclaration = 32, RULE_element_replaceable = 33, RULE_component_clause1 = 34, 
		RULE_component_declaration1 = 35, RULE_short_class_definition = 36, RULE_equation_section = 37, 
		RULE_algorithm_section = 38, RULE_equation = 39, RULE_statement_comma = 40, 
		RULE_statement = 41, RULE_if_equation = 42, RULE_if_statement = 43, RULE_for_equation = 44, 
		RULE_for_statement = 45, RULE_for_indices = 46, RULE_for_index = 47, RULE_while_statement = 48, 
		RULE_when_equation = 49, RULE_when_statement = 50, RULE_connect_clause = 51, 
		RULE_expression = 52, RULE_simple_expression = 53, RULE_logical_expression = 54, 
		RULE_logical_term = 55, RULE_logical_factor = 56, RULE_relation = 57, 
		RULE_rel_op = 58, RULE_arithmetic_expression = 59, RULE_add_op = 60, RULE_term = 61, 
		RULE_mul_op = 62, RULE_factor = 63, RULE_primary = 64, RULE_array = 65, 
		RULE_signed_number = 66, RULE_name = 67, RULE_component_reference = 68, 
		RULE_function_call_args = 69, RULE_function_arguments = 70, RULE_function_arguments_non_first = 71, 
		RULE_array_arguments = 72, RULE_named_arguments = 73, RULE_named_argument = 74, 
		RULE_function_argument = 75, RULE_output_expression_list = 76, RULE_expression_list = 77, 
		RULE_array_subscripts = 78, RULE_subscript_ = 79, RULE_comment = 80, RULE_string_comment = 81, 
		RULE_annotation = 82;
	private static String[] makeRuleNames() {
		return new String[] {
			"stored_definition", "class_definition", "class_specifier", "class_prefixes", 
			"long_class_specifier", "short_class_specifier", "der_class_specifier", 
			"base_prefix", "enum_list", "enumeration_literal", "composition", "language_specification", 
			"external_function_call", "element_list", "element", "import_clause", 
			"import_list", "extends_clause", "constraining_clause", "component_clause", 
			"type_prefix", "type_specifier", "component_list", "component_declaration", 
			"condition_attribute", "declaration", "modification", "class_modification", 
			"argument_list", "argument", "element_modification_or_replaceable", "element_modification", 
			"element_redeclaration", "element_replaceable", "component_clause1", 
			"component_declaration1", "short_class_definition", "equation_section", 
			"algorithm_section", "equation", "statement_comma", "statement", "if_equation", 
			"if_statement", "for_equation", "for_statement", "for_indices", "for_index", 
			"while_statement", "when_equation", "when_statement", "connect_clause", 
			"expression", "simple_expression", "logical_expression", "logical_term", 
			"logical_factor", "relation", "rel_op", "arithmetic_expression", "add_op", 
			"term", "mul_op", "factor", "primary", "array", "signed_number", "name", 
			"component_reference", "function_call_args", "function_arguments", "function_arguments_non_first", 
			"array_arguments", "named_arguments", "named_argument", "function_argument", 
			"output_expression_list", "expression_list", "array_subscripts", "subscript_", 
			"comment", "string_comment", "annotation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'within'", "';'", "'final'", "'encapsulated'", "'partial'", "'class'", 
			"'model'", "'operator'", "'record'", "'block'", "'expandable'", "'connector'", 
			"'type'", "'package'", "'pure'", "'impure'", "'function'", "'end'", "'extends'", 
			"'='", "'enumeration'", "'('", "':'", "')'", "'der'", "','", "'public'", 
			"'protected'", "'external'", "'redeclare'", "'inner'", "'outer'", "'replaceable'", 
			"'import'", "'.*'", "'.{'", "'}'", "'constrainedby'", "'flow'", "'stream'", 
			"'discrete'", "'parameter'", "'constant'", "'input'", "'output'", "'if'", 
			"':='", "'each'", "'initial'", "'equation'", "'algorithm'", "'break'", 
			"'return'", "'then'", "'elseif'", "'else'", "'for'", "'loop'", "'in'", 
			"'while'", "'when'", "'elsewhen'", "'connect'", "'or'", "'and'", "'not'", 
			"'<'", "'<='", "'>'", "'>='", "'=='", "'<>'", "'+'", "'-'", "'.+'", "'.-'", 
			"'*'", "'/'", "'./'", "'^'", "'.^'", "'false'", "'true'", "'['", "']'", 
			"'{'", "'time'", "'.'", "'annotation'", null, null, null, null, null, 
			null, "'\\uFEFF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "IDENT", "STRING", "UNSIGNED_NUMBER", 
			"WS", "COMMENT", "LINE_COMMENT", "UnicodeBOM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Modelica0_3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Modelica0_3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stored_definitionContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Modelica0_3Parser.EOF, 0); }
		public List<Class_definitionContext> class_definition() {
			return getRuleContexts(Class_definitionContext.class);
		}
		public Class_definitionContext class_definition(int i) {
			return getRuleContext(Class_definitionContext.class,i);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Stored_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stored_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Modelica0_3Visitor ) return ((Modelica0_3Visitor<? extends T>)visitor).visitStored_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stored_definitionContext stored_definition() throws RecognitionException {
		Stored_definitionContext _localctx = new Stored_definitionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stored_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(166);
				match(T__0);
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__87 || _la==IDENT) {
					{
					setState(167);
					name();
					}
				}

				setState(170);
				match(T__1);
				}
			}

			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 262136L) != 0)) {
				{
				{
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(173);
					match(T__2);
					}
				}

				setState(176);
				class_definition();
				setState(177);
				match(T__1);
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(184);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_definitionContext extends ParserRuleContext {
		public Class_prefixesContext class_prefixes() {
			return getRuleContext(Class_prefixesContext.class,0);
		}
		public Class_specifierContext class_specifier() {
			return getRuleContext(Class_specifierContext.class,0);
		}
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Modelica0_3Visitor ) return ((Modelica0_3Visitor<? extends T>)visitor).visitClass_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(186);
				match(T__3);
				}
			}

			setState(189);
			class_prefixes();
			setState(190);
			class_specifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_specifierContext extends ParserRuleContext {
		public Long_class_specifierContext long_class_specifier() {
			return getRuleContext(Long_class_specifierContext.class,0);
		}
		public Short_class_specifierContext short_class_specifier() {
			return getRuleContext(Short_class_specifierContext.class,0);
		}
		public Der_class_specifierContext der_class_specifier() {
			return getRuleContext(Der_class_specifierContext.class,0);
		}
		public Class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_specifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Modelica0_3Visitor ) return ((Modelica0_3Visitor<? extends T>)visitor).visitClass_specifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_specifierContext class_specifier() throws RecognitionException {
		Class_specifierContext _localctx = new Class_specifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_specifier);
		try {
			setState(195);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(192);
				long_class_specifier();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				short_class_specifier();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(194);
				der_class_specifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_prefixesContext extends ParserRuleContext {
		public Class_prefixesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_prefixes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Modelica0_3Visitor ) return ((Modelica0_3Visitor<? extends T>)visitor).visitClass_prefixes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_prefixesContext class_prefixes() throws RecognitionException {
		Class_prefixesContext _localctx = new Class_prefixesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_prefixes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(197);
				match(T__4);
				}
			}

			setState(221);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(200);
				match(T__5);
				}
				break;
			case 2:
				{
				setState(201);
				match(T__6);
				}
				break;
			case 3:
				{
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(202);
					match(T__7);
					}
				}

				setState(205);
				match(T__8);
				}
				break;
			case 4:
				{
				setState(206);
				match(T__9);
				}
				break;
			case 5:
				{
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__10) {
					{
					setState(207);
					match(T__10);
					}
				}

				setState(210);
				match(T__11);
				}
				break;
			case 6:
				{
				setState(211);
				match(T__12);
				}
				break;
			case 7:
				{
				setState(212);
				match(T__13);
				}
				break;
			case 8:
				{
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14 || _la==T__15) {
					{
					setState(213);
					_la = _input.LA(1);
					if ( !(_la==T__14 || _la==T__15) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(216);
					match(T__7);
					}
				}

				setState(219);
				match(T__16);
				}
				break;
			case 9:
				{
				setState(220);
				match(T__7);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Long_class_specifierContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(Modelica0_3Parser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(Modelica0_3Parser.IDENT, i);
		}
		public String_commentContext string_comment() {
			return getRuleContext(String_commentContext.class,0);
		}
		public CompositionContext composition() {
			return getRuleContext(CompositionContext.class,0);
		}
		public Class_modificationContext class_modification() {
			return getRuleContext(Class_modificationContext.class,0);
		}
		public Long_class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_long_class_specifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Modelica0_3Visitor ) return ((Modelica0_3Visitor<? extends T>)visitor).visitLong_class_specifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Long_class_specifierContext long_class_specifier() throws RecognitionException {
		Long_class_specifierContext _localctx = new Long_class_specifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_long_class_specifier);
		int _la;
		try {
			setState(239);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(223);
				match(IDENT);
				setState(224);
				string_comment();
				setState(225);
				composition();
				setState(226);
				match(T__17);
				setState(227);
				match(IDENT);
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				setState(229);
				match(T__18);
				setState(230);
				match(IDENT);
				setState(232);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__21) {
					{
					setState(231);
					class_modification();
					}
				}

				setState(234);
				string_comment();
				setState(235);
				composition();
				setState(236);
				match(T__17);
				setState(237);
				match(IDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Short_class_specifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(Modelica0_3Parser.IDENT, 0); }
		public Base_prefixContext base_prefix() {
			return getRuleContext(Base_prefixContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public Array_subscriptsContext array_subscripts() {
			return getRuleContext(Array_subscriptsContext.class,0);
		}
		public Class_modificationContext class_modification() {
			return getRuleContext(Class_modificationContext.class,0);
		}
		public Enum_listContext enum_list() {
			return getRuleContext(Enum_listContext.class,0);
		}
		public Short_class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short_class_specifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Modelica0_3Visitor ) return ((Modelica0_3Visitor<? extends T>)visitor).visitShort_class_specifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Short_class_specifierContext short_class_specifier() throws RecognitionException {
		Short_class_specifierContext _localctx = new Short_class_specifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_short_class_specifier);
		int _la;
		try {
			setState(265);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(241);
				match(IDENT);
				setState(242);
				match(T__19);
				setState(243);
				base_prefix();
				setState(244);
				name();
				setState(246);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__83) {
					{
					setState(245);
					array_subscripts();
					}
				}

				setState(249);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__21) {
					{
					setState(248);
					class_modification();
					}
				}

				setState(251);
				comment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(253);
				match(IDENT);
				setState(254);
				match(T__19);
				setState(255);
				match(T__20);
				setState(256);
				match(T__21);
				setState(261);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__23:
				case IDENT:
					{
					setState(258);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==IDENT) {
						{
						setState(257);
						enum_list();
						}
					}

					}
					break;
				case T__22:
					{
					setState(260);
					match(T__22);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(263);
				match(T__23);
				setState(264);
				comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Der_class_specifierContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(Modelica0_3Parser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(Modelica0_3Parser.IDENT, i);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public Der_class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_der_class_specifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Modelica0_3Visitor ) return ((Modelica0_3Visitor<? extends T>)visitor).visitDer_class_specifier(this);
			else return visitor.visitChildren(this);
		}
	}
